*) valueOf is more efficient so we should use it.
git-svn-id: svn://svn.paxle.net/paxle/trunk@2028 f5d3ab42-bacf-4b1a-9692-565be65a0cfe